        and possibility to change pickup point using widget
      - Added: information about chosen pickup point to order confirmation, e-mail and history detail
      - Updated: using native configuration storage (https://devdocs.prestashop.com/1.7/modules/creation/#the-configuration-object )
        and removal of packetery_settings table
      - Added: verifying that the sender indication exists using the senderGetReturnRouting API point
      - Fixed: corrected behavior when changing carrier or address in order administration
      - Added: Packetery classes loaded using autoloader from libs folder
      - Added: export of packet weight to API and CSV when using the kg unit, information for user when using another unit
2.1.7 - Added: proper handling of old broken orders in order administration
      - Removed: imperfect splitting of address to street and house number
      - Added: order is processed correctly when using legacy widget v5
      - Removed: unused fragments of code
      - Fixed: proper processing of database query return values during installation and uninstallation
      - Fixed: notice during order state update
      - Added: showing carrier extra content for (probably broken) third party templates
      - Fixed: proper generation and use of translations called outside the module's main class file
2.1.8 - Fixed: fix of bug in PrestaShop version lower than 1.7.6, when saving a change of pickup point
        in the administration, especially in the case of Z-BOXes (getting JSON correctly)
2.2.0 - Added: compatibility with PrestaShop 1.6
        Added: ability to open widget right after choosing delivery method without the need to click on button
      - Updated: packetery orders table is backed up and deleted upon uninstall
      - Updated: improved compatibility with PHP versions 7.2,7.4
      - Updated: refactored saving pickup point information in cart